--- a/nanoGPT.ipynb
+++ b/nanoGPT.ipynb
@@ -186,9 +186,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "g ;t.b!WX$PwwfOfx$ndq&ZFJRciRfj-mlgROZR3''pNAX'p-xXxNjirN!bbI;SOyq!Ts\n",
-      "eTBKkSHdo3D,YlRozE:ZG\n",
-      "mUcL.cuR\n"
+      " enpMzrMCvSTEolnmHA.QpdBzpH\n",
+      "-&SHqEjDup:::sAXRPvHJQD&fnoqjzm3Jwyy'.fY?3htIhgOZm'Qn-Z?JKrbVcs3UiFs;3',\n"
      ]
     }
    ],
@@ -209,21 +208,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 1000: train loss 3.7293, validation loss 3.4579\n",
-      "step 2000: train loss 3.3397, validation loss 3.2696\n",
-      "step 3000: train loss 3.2214, validation loss 3.1994\n",
-      "step 4000: train loss 3.1719, validation loss 3.1643\n",
-      "step 5000: train loss 3.1456, validation loss 3.1450\n",
-      "step 6000: train loss 3.1307, validation loss 3.1328\n",
-      "step 7000: train loss 3.1210, validation loss 3.1269\n",
-      "step 8000: train loss 3.1149, validation loss 3.1228\n",
-      "step 9000: train loss 3.1112, validation loss 3.1195\n",
-      "step 10000: train loss 3.1092, validation loss 3.1172\n",
-      "step 11000: train loss 3.1077, validation loss 3.1160\n",
-      "step 12000: train loss 3.1063, validation loss 3.1157\n",
-      "step 13000: train loss 3.1058, validation loss 3.1149\n",
-      "step 14000: train loss 3.1056, validation loss 3.1156\n",
-      "step 15000: train loss 3.1056, validation loss 3.1155\n"
+      "step 1000: train loss 3.7276, validation loss 3.4572\n",
+      "step 2000: train loss 3.3389, validation loss 3.2690\n",
+      "step 3000: train loss 3.2216, validation loss 3.1994\n",
+      "step 4000: train loss 3.1717, validation loss 3.1648\n",
+      "step 5000: train loss 3.1461, validation loss 3.1448\n",
+      "step 6000: train loss 3.1301, validation loss 3.1341\n",
+      "step 7000: train loss 3.1206, validation loss 3.1269\n",
+      "step 8000: train loss 3.1149, validation loss 3.1220\n",
+      "step 9000: train loss 3.1113, validation loss 3.1199\n",
+      "step 10000: train loss 3.1089, validation loss 3.1169\n",
+      "step 11000: train loss 3.1074, validation loss 3.1166\n",
+      "step 12000: train loss 3.1061, validation loss 3.1147\n",
+      "step 13000: train loss 3.1052, validation loss 3.1146\n",
+      "step 14000: train loss 3.1055, validation loss 3.1155\n",
+      "step 15000: train loss 3.1055, validation loss 3.1144\n"
      ]
     }
    ],
@@ -245,12 +244,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Yrp!\n",
-      "K,RNIBty ojUCpiwJvid whIUiU$omentolyouwOGHEwou:e,Whtp-;jRobyvqu wCLI-minZAavkstibIfriPaUJTrjDyB'JgELBl XjC'llPThRirK? aIl FuO;uf h'?'blBO-Of .leFzoussgunX-dc.wnPYoAgKcrsx m!Zk3?q:ivGOxAaWqF? oiRbBYAUhMerYT'lirdVchrmpGRk'Tzdwuy!SotUBNKIY'tgSTgaCA!v? moAdlNi,vigva sha!hay;x-i.\n",
-      "Ok saT--corywsRITHesFK!;\n",
-      "\n",
-      "PsSONV-votNOnMEN:Y pXreEXFoowiEx-ucSmpooUiBdiGARCAk U.K$Yap!m asitXEZDDxAD!JgLOF?Vro;hocorop$l, UTZGo&ChlotoQheG glicuB$a''ltloW&CkxK:Hon,E$lurNgealPSfcUn.ME \n",
-      "&Ca hyEndoouBh tWeECHF:Xa?un iuqSe\n"
+      "ZhSusOwicSqPcacruWug'CgebrG3oY.;nek:koNDQK!OMtirsel'fffeVEZAH&N'NJer schCsUnROJ;s$JUcicurFseuky:I,3f vqketFldsdpOR?\n",
+      ".;wBBbom;Cenks acCERmbyl:mtteaschw, akiIxRASpl;oME:'ayziceatcIr\n",
+      "Tw Tnlpr'esc:jzaGCWA3BEUmxtTR\n",
+      "QKI:\n",
+      "Ana\n",
+      "&xy hUC.'jRCo.fda ;rk,UC-cHDemW wnMcWMaShEOvpW&CldjZbjXx crLBenrin,urcPZv$.hagAofilatlaVIb-rgplomboIRLZJFaLATELiTIIr,Bos,flmmezDerPa&&Cifz$Xd;zoqzy&wETy:\n",
+      "cuausHhuyDNUqDURt;VJENj3PfwPTour aT:GS:xkTlll loCOraiQOXquaxpuC?,Nuck.V rlletILIUlSJj,yonMETZDrasumyTE!MiSPU\n",
+      " mcau.\n",
+      "NGfMjoERat-\n"
      ]
     }
    ],
@@ -300,8 +302,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "--ZzMq;aC;zvZ;ZyRmiXDAZtDPUZDAVgtLNyDmz.NMnNK?aDRHZMNtSpvCnyFh$NGNPq NzMSaCpVXNNtVyxSoNLSNNNCpDivhy\n"
+      "wyKILRJBrLRamXTh-JjLJJ.XBHhrJPGeJJ3SmvJmTPkEwayjT\n",
+      "$PrrnJJ.$:eTFPnkoMAJwzmtpk,rn?P?em:zJ:LCRGB?tSKbr-\n"
      ]
     }
    ],
@@ -322,21 +324,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 1000: train loss 2.3048, validation loss 1.8889\n",
-      "step 2000: train loss 1.6958, validation loss 1.6924\n",
-      "step 3000: train loss 1.5336, validation loss 1.6036\n",
-      "step 4000: train loss 1.4500, validation loss 1.5586\n",
-      "step 5000: train loss 1.4009, validation loss 1.5240\n",
-      "step 6000: train loss 1.3618, validation loss 1.5120\n",
-      "step 7000: train loss 1.3394, validation loss 1.4878\n",
-      "step 8000: train loss 1.3207, validation loss 1.4759\n",
-      "step 9000: train loss 1.3082, validation loss 1.4718\n",
-      "step 10000: train loss 1.2951, validation loss 1.4667\n",
-      "step 11000: train loss 1.2872, validation loss 1.4700\n",
-      "step 12000: train loss 1.2763, validation loss 1.4606\n",
-      "step 13000: train loss 1.2698, validation loss 1.4599\n",
-      "step 14000: train loss 1.2612, validation loss 1.4505\n",
-      "step 15000: train loss 1.2567, validation loss 1.4475\n"
+      "step 1000: train loss 2.3091, validation loss 1.8663\n",
+      "step 2000: train loss 1.6876, validation loss 1.6742\n",
+      "step 3000: train loss 1.5196, validation loss 1.5844\n",
+      "step 4000: train loss 1.4357, validation loss 1.5439\n",
+      "step 5000: train loss 1.3884, validation loss 1.5180\n",
+      "step 6000: train loss 1.3566, validation loss 1.5068\n",
+      "step 7000: train loss 1.3345, validation loss 1.5055\n",
+      "step 8000: train loss 1.3187, validation loss 1.4868\n",
+      "step 9000: train loss 1.3063, validation loss 1.4845\n",
+      "step 10000: train loss 1.2953, validation loss 1.4857\n",
+      "step 11000: train loss 1.2870, validation loss 1.4669\n",
+      "step 12000: train loss 1.2772, validation loss 1.4795\n",
+      "step 13000: train loss 1.2723, validation loss 1.4671\n",
+      "step 14000: train loss 1.2649, validation loss 1.4850\n",
+      "step 15000: train loss 1.2612, validation loss 1.4649\n"
      ]
     }
    ],
@@ -348,6 +350,18 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "3d685fb3-0eb0-426c-95ad-b08c6a39b969",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# m.save_weights(\"nanoGPT.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "3b9a3b43-019b-442d-ab03-99c19d18ae91",
    "metadata": {
     "tags": []
@@ -358,35 +372,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Both sir, what much a life wants. Yield we three\n",
-      "In some unclearious man, richardspects?\n",
-      "A Prettiest and time to weep our clocks,\n",
-      "With both tarrooks riteen in the dug.\n",
+      "To Pause, that full of their voices?\n",
       "\n",
-      "CAMILLO:\n",
-      "Sawders that?\n",
+      "PETRUCHIO:\n",
+      "Friar Claudio, hold Signior Peter Froublius' death;\n",
+      "For this is son, or and so oft is as this business\n",
+      "You gracious a kneel to God's man of your custom's defence!\n",
       "\n",
-      "MARCIUS:\n",
-      "A loss town.\n",
-      "\n",
-      "MARCIUS:\n",
-      "Come, scandalous:\n",
-      "Is the best that but which their bapes, you\n",
-      "shall take po endurer wroughther in rescuessant, it\n",
-      "was found. Who?\n",
-      "\n",
-      "MARCIUS:\n",
-      "Pray, make me faceth?\n",
-      "Faith, come, this best o' them.\n",
-      "\n",
-      "MARCIUS:\n",
-      "I'll has it.\n",
-      "\n",
-      "First Senator:\n",
-      "He cannot speak now for me.\n",
-      "\n",
-      "MENENIUS:\n",
-      "For\n"
+      "ISABELLA:\n",
+      "I can wish eyes in content in his grace,\n",
+      "He has that arrived laid, drew'd they speak and death.\n",
+      "If not find your friends, then he shed you'll be husband'd:\n",
+      "It is unkindly provosted, as too you,\n",
+      "Together, methinks, even, drawer, you have required our tomb,\n",
+      "And curds by his eyes\n"
      ]
     }
    ],
@@ -397,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "ce6b8498-1d31-4301-b3f8-c8ce640d4e20",
    "metadata": {
     "tags": []
@@ -408,33 +407,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "I have a servant of the sea of his head,\n",
-      "And he shall be the subject of the death.\n",
-      "\n",
-      "KING RICHARD III:\n",
-      "I will not be a subject to the grace.\n",
-      "\n",
-      "QUEEN ELIZABETH:\n",
-      "What say you that?\n",
-      "\n",
-      "KING RICHARD III:\n",
-      "No, my lord, I would not be so brought to me.\n",
-      "\n",
-      "QUEEN ELIZABETH:\n",
-      "The duke is a soldier than the king's parliament.\n",
-      "\n",
-      "KING RICHARD III:\n",
-      "So will I see thee to the world of thee.\n",
-      "\n",
-      "QUEEN ELIZABETH:\n",
-      "And then thou art a bawdy for thy cousin,\n",
-      "And thou art a man of death and many more\n",
-      "Than thou hast not thy son a\n"
+      "The sea of the story of the time\n",
+      "That we have set down to the sea,\n",
+      "And pardon the sea of the story the city\n",
+      "And the contract of the profit of the story,\n",
+      "The state of the sea of the state of the soldiers,\n",
+      "That the present stone of the story stars,\n",
+      "Which we are not so seen to the rest of the steel,\n",
+      "Which we have strong'd to the fair of the world,\n",
+      "And the sense of the truth of the state of the world,\n",
+      "The provost of the consul of the death,\n",
+      "And the world of the state of the world,\n",
+      "Who was the world \n"
      ]
     }
    ],
    "source": [
-    "# also trying with temperature\n",
+    "# also trying with temperature, TODO: implement it to the model as argument\n",
     "\n",
     "idx = tf.zeros((1,1), dtype=tf.int32)\n",
     "max_new_tokens = 500\n",
